# mem2

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/benchmark/: arc_agi.yaml  competition_math_ps.yaml  livecodebench.yaml
configs/evaluator/: arc_exec_v1.yaml  lcb_exec.yaml  math_ps_exec.yaml
configs/experiments/: arcmemo_arc_lockstep_replay.yaml  arcmemo_arc_logic_parity_openrouter.yaml  arcmemo_arc_logic_parity_openrouter_mem_retry.yaml  arcmemo_arc_logic_parity_openrouter_mem_retry_desc.yaml  arcmemo_arc_parity_baseline.yaml  arcmemo_arc_strict.yaml  baseline_lcb_eval.yaml  baseline_lcb_v56_342_qwen.yaml  baseline_math_eval.yaml  baseline_math_l5_100_qwen25_7b.yaml  build_lcb.yaml  build_math.yaml  concept_math_eval.yaml  memory_lcb_eval.yaml  memory_math_eval.yaml  recovery_arc_10.yaml  recovery_lcb_10.yaml  recovery_lcb_100_qwen.yaml  recovery_lcb_v1_100_qwen.yaml  recovery_math_10.yaml  recovery_math_100_qwen.yaml  recovery_math_100_qwen25_7b.yaml  recovery_math_100_qwen3_4b.yaml  smoke_arc.yaml  smoke_arc_concept.yaml  smoke_lcb.yaml  smoke_math_ps.yaml  tmp_live100_gemini_controlled.yaml  tmp_live100_qwen30b_controlled.yaml  tmp_live10_nocache.yaml  tmp_livefull_nocache.yaml  tmp_livefull_nocache_bs8.yaml
configs/feedback_engine/: lcb_gt.yaml  math_ps_gt.yaml
data/arc_agi/: README.md  (+1 more)
docs/: arcmemo_default_parity_contract.md  parity_baseline_freeze.md
scripts/: collect_results.py  compress_concepts.py  download_lcb.py  export_run_report.py  extract_concepts.py  preflight_model.py  select_concepts.py
(+140 files in other folders)
