[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mem2"
version = "0.1.0"
description = "Modular benchmark-memory-inference pipeline for ArcMemo migration"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "mem2 migration team"}]
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.24",
  "openai",
  "tiktoken",
  "diskcache",
  "tenacity",
  "tqdm",
  "orjson",
  "python-dotenv",
  "nest-asyncio",
  "omegaconf",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mem2*"]
